--- a/todos/index.html
+++ b/todos/index.html
@@ -4,7 +4,7 @@
     <title>To-do</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="root"></div>
     <script src="bundle.js" charset="utf-8"></script>
   </body>
 </html>
