--- a/todos/index.html
+++ b/todos/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>To-do</title>
+    <title>Todos</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script src="bundle.js" charset="utf-8"></script>
+    <div id="root">
+    </div>
+    <script src="/static/bundle.js"></script>
   </body>
 </html>
